# dbt

./: .bumpversion.cfg  .changie.yaml  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  dev-requirements.txt  dev_requirements.txt  docker-compose.yml  editable-requirements.txt  hatch.toml  pyproject.toml  pytest.ini  setup.py  tox.ini
core/: MANIFEST.in  README.md  hatch.toml  pyproject.toml  setup.py
core/dbt/: README.md  __init__.py  compilation.py  constants.py  deprecations.py  exceptions.py  flags.py  helper_types.py  hooks.py  internal_deprecations.py  jsonschemas.py  lib.py  logger.py  main.py  node_types.py  semver.py  tracking.py  utils.py  version.py
core/dbt/adapters/: README.md  cache.py  factory.py  protocol.py  utils.py
core/dbt/adapters/base/: README.md  __init__.py  column.py  connections.py  impl.py  meta.py  plugin.py  query_headers.py  relation.py
core/dbt/adapters/clients/: jinja.py
core/dbt/adapters/sql/: impl.py  (+1 more)
core/dbt/artifacts/: README.md  base.py  catalog.py  freshness.py  results.py  run.py
core/dbt/cli/: README.md  artifact_upload.py  example.py  exceptions.py  flags.py  main.py  option_types.py  options.py  params.py  requires.py  types.py
core/dbt/clients/: README.md  _jinja_blocks.py  agate_helper.py  checked_load.py  git.py  jinja.py  jinja_static.py  registry.py  system.py  yaml_helper.py
core/dbt/common/: helper_types.py
core/dbt/config/: __init__.py  profile.py  project.py  renderer.py  runtime.py  selectors.py  utils.py
core/dbt/context/: README.md  base.py  common.py  configured.py  context_config.py  docs.py  exceptions_jinja.py  macro_resolver.py  macros.py  manifest.py  providers.py  secret.py
core/dbt/contracts/: README.md  connection.py  files.py  project.py  publication.py  relation.py  results.py  rpc.py  selection.py  sql.py  state.py  util.py
core/dbt/events/: README.md  __init__.py  adapter_endpoint.py  base_types.py  core_types.proto  core_types_pb2.py  eventmgr.py  functions.py  logging.py  proto_types.py  test_types.py  types.proto  types.py  types_pb2.py
core/dbt/graph/: README.md  cli.py  graph.py  queue.py  selector.py  selector_methods.py  selector_spec.py
core/dbt/include/: index.html
core/dbt/jsonschemas/: jsonschemas.py
core/dbt/parser/: README.md  base.py  common.py  docs.py  fixtures.py  functions.py  generic_test.py  generic_test_builders.py  hooks.py  macros.py  manifest.py  models.py  partial.py  read_files.py  schema_generic_tests.py  schema_renderer.py  schema_yaml_readers.py  schemas.py  search.py  seeds.py  snapshots.py  sources.py  sql.py  unit_tests.py
core/dbt/plugins/: contracts.py  manager.py  manifest.py
core/dbt/task/: README.md  base.py  build.py  clean.py  clone.py  compile.py  contextvars.py  debug.py  deps.py  freshness.py  generate.py  init.py  list.py  parse.py  printer.py  retry.py  run.py  run_operation.py  runnable.py  seed.py  serve.py  show.py  snapshot.py  sql.py  test.py
core/dbt/tests/: util.py
core/dbt/utils/: utils.py
core/scripts/: create_adapter_plugins.py
(+2228 files in other folders)
